Many fixes and new features